Fixed: label was too long on certain devices

--- a/www-src/app/styles/application.styl
+++ b/www-src/app/styles/application.styl
@@ -70,6 +70,10 @@ darkbase = basecolor - 20%
 .input-label
     flex 1 0 130px
 
+// overrides inonic default
+#deviceNamePicker .item-stacked-label input
+    padding-left 0
+
 .item-progress
     position: absolute
     bottom: 0px
